--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help for Humanity</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div>
+            <h1 id="title">Let's Help <span>Humanity</span> For A Better Earth</h1>
+            <p><strong>"Help for Humanity"</strong> is a Non-Profit organization that helps people  <br>
+                Who are in need. If you wanna help them, then...</p>
+            <a id="donate-button" href="https://www.gmb-akash.com/stories/47/"> Donate Now</a>
+        </div>
+    </section>
+    <section class="middle-banner">
+        <div>
+            <h1>Donate Today</h1>
+            <p>Donate to the People who are ravaged by Natural Disasters</p>
+            <p>Your small contribution can make <b>HUGE</b> impact!</p>
+        </div>
+        <div class="amount">
+            <div>100tk</div>
+            <div>200tk</div>
+            <div id="selected-amount">
+                500tk
+            </div>
+            <div>1000tk</div>
+            <div>5000tk</div>
+        </div>
+        <p id="other-amout"><u>                   Other Amount (Taka)                         </u></p>
+        <a id="donate-button" href="https://www.gmb-akash.com/stories/47/"> Donate Now</a>
+    </section>
+    <section class="donate-plan">
+        <h1>Our Donate Plan</h1>
+        <p>You can choose what you want to donate for.</p>
+        <p>We will make sure every Penny counts!</p>
+    </section>
 </body>
 </html>
