--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto&family=Splash&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="top-banner">
@@ -26,21 +26,103 @@
             <p>Your small contribution can make <b>HUGE</b> impact!</p>
         </div>
         <div class="amount">
-            <div>100tk</div>
-            <div>200tk</div>
+            <div id="other-amount">100tk</div>
+            <div id="other-amount">200tk</div>
             <div id="selected-amount">
                 500tk
             </div>
-            <div>1000tk</div>
-            <div>5000tk</div>
+            <div id="other-amount">1000tk</div>
+            <div id="other-amount">5000tk</div>
         </div>
-        <p id="other-amout"><u>                   Other Amount (Taka)                         </u></p>
+        <input id="input1" type="text" placeholder="Other Amount (Taka)"> <br>
         <a id="donate-button" href="https://www.gmb-akash.com/stories/47/"> Donate Now</a>
     </section>
     <section class="donate-plan">
         <h1>Our Donate Plan</h1>
         <p>You can choose what you want to donate for.</p>
         <p>We will make sure every Penny counts!</p>
+        <div class="donate-plans">
+            <div id="dp1">
+                <img src="donate-today-main\icons\food.png" alt="icon1">
+                <h2>Food for a Family</h2>
+                <p>Every day almost 80milion people are Starving</p>
+                <p>Share your food with them</p>
+                <p>And help them to live</p>
+                <p><b> Donate Today!</b></p>
+            </div>
+            <div id="dp2">
+                <img src="donate-today-main\icons\shelter.png" alt="icon2">
+                <h2>Shelter for a Family</h2>
+                <p>Every day Thousands of People becomes Homeless.</p>
+                <p>Because of War, Natural disasters etc..</p>
+                <p>Help Them to find a roof to stay</p>
+                <p><b> Donate Today!</b></p>
+            </div >
+            <div id="dp3">
+                <img src="donate-today-main\icons\Frame-1.png" alt="icon3">
+                <h2>Education for a Child</h2>
+                <p>Millions of young minds are away from the Privilage of Eduacation</p>
+                <p>Help them to gain a healthy Education</p>
+                <p>To Live a Better Life</p>
+                <p><b>Donate Today!</b></p>
+            </div>
+        </div>
     </section>
+    <section class="lower-banner">
+        <div class="lower-banner1">
+            <div id="lower-banner-text1">
+                <h1>Their Lives Depends on Your Donation</h1>
+                <p>Many people are homeless, starved & raved disasters </p>
+                <p>They need a hope to Live</p>
+                <p>Your one donation can change their lives</p>
+                <a id="donate-button" href="https://www.gmb-akash.com/stories/47/"> Make a Change!</a>
+            </div>
+            <div>
+                <img src="donate-today-main\images\donation6.jpg" alt="Crisis1">
+            </div>
+        </div>
+        <div class="lower-banner2">
+            <div>
+                <img src="donate-today-main\images\donation8.jpg" alt="Crisis2">
+            </div>
+            <div id="lower-banner-text2">
+                <h1>They need Us to Survive</h1>
+                <p>Millions of people are struggling to Survive</p>
+                <p>They need your precious support to live</p>
+                <p>Your small step can make a huge leap</p>
+                <a id="donate-button" href="https://www.gmb-akash.com/stories/47/">How to Contribute?</a>
+            </div>
+        </div>
+    </section>
+    <section class="testimonial">
+        <div>
+            <img src="donate-today-main\images\jhankar2.png" alt="JhankarSir">
+        </div>
+        <div id="speech">
+            <h1>Testimonial</h1>
+            <p>" <strong>'Help for Humanity'</strong> are taking a great initaitive to make Earth a better place </p>
+            <p>I can't stress engough to express that how much impact they are putting on unpriviliged comunities</p>
+            <p>I cordially thank them for helping the humanity</p>
+            <p>I think you should also join their Mission and make world a Better place for Us"</p>
+            <h1 id="signature">Jhankar Mahbub</h1>
+            <p>CEO, Programming Hero</p>
+        </div>
+    </section>
+    <section>
+        <div class="newsletters">
+            <h1>Get Our Updates</h1>
+            <p>Join our Newsletters to get information about our new activities</p>
+            <p>It's Free!</p>
+        </div>
+        <div class="email">
+            <div>
+                <input id="input2" type="Email" placeholder="Email">  <button>Subscribe</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h1 id="footer">Be Humble</h1>
+        <p>I'm Gonna Do It</p>
+    </footer>
 </body>
 </html>
