--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto&family=Splash&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
 </head>
 <body>
     <section class="top-banner">
@@ -68,7 +69,7 @@
             </div>
         </div>
     </section>
-    <section class="lower-banner">
+    <section class="lower-banner ">
         <div class="lower-banner1">
             <div id="lower-banner-text1">
                 <h1>Their Lives Depends on Your Donation</h1>
@@ -94,13 +95,13 @@
             </div>
         </div>
     </section>
-    <section class="testimonial">
+    <section class="testimonial shadow-lg">
         <div>
             <img src="donate-today-main\images\jhankar2.png" alt="JhankarSir">
         </div>
         <div id="speech">
             <h1>Testimonial</h1>
-            <p>" <strong>'Help for Humanity'</strong> are taking a great initaitive to make Earth a better place </p>
+            <p>" <strong style="color: rgba(255, 238, 238, 0.945);">Help for Humanity</strong> are taking a great initaitive to make Earth a better place </p>
             <p>I can't stress engough to express that how much impact they are putting on unpriviliged comunities</p>
             <p>I cordially thank them for helping the humanity</p>
             <p>I think you should also join their Mission and make world a Better place for Us"</p>
