--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help for Humanity</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto&family=Splash&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <section class="top-banner text-center text-xl-start">
@@ -19,25 +21,25 @@
                 <h1 id="title">Let's Help <span id="humanity">Humanity</span> For A Better Earth</h1>
                 <p class="text-light fw-bold" id="banner-text"><strong>"Help for Humanity"</strong> is a Non-Profit organization that helps people  <br>
                     Who are in need. If you wanna help them, then...</p>
-                <button type="button" class="btn btn-danger p-3 text-light" href="https://www.gmb-akash.com/stories/47/">Donate Now</button>
+                <button class="btn btn-danger p-3 text-light" href="#plans">Donate Now</button>
             </div>
         </div>
     </section>
-    <section class="middle-banner">
+    <section class="middle-banner" id= "plans">
         <div>
             <h1>Donate Today</h1>
             <p>Donate to the People who are ravaged by Natural Disasters</p>
             <p>Your small contribution can make <b>HUGE</b> impact!</p>
         </div>
         <div class="my-5 amount d-flex flex-column flex-xl-row align-items-center justify-content-evenly">
-            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger opacity-75">100৳</button>
-            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger opacity-75">200৳</button>
-            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger opacity-75">500৳</button>
-            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger opacity-75">700৳</button>
-            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger opacity-75">1000৳</button>
+            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger" id="plan" onclick="myFunction(100)">100৳</button>
+            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger" id="plan" onclick="myFunction(200)">200৳</button>
+            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger" id="plan" onclick="myFunction(500)">500৳</button>
+            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger" id="plan" onclick="myFunction(700)">700৳</button>
+            <button type="button" class="px-5 py-4 m-3 fw-bold btn btn-outline-danger" id="plan" onclick="myFunction(1000)">1000৳</button>
         </div>
-        <input id="input1" type="text" placeholder="Other Amount (Taka)"> <br>
-        <a class="btn btn-outline-danger p-3" id="donate-button" href="https://www.gmb-akash.com/stories/47/"> Donate Now</a>
+        <input class="text-danger" id="input1" type="text" placeholder="Other Amount (Taka)"/> <br>
+        <button type="button" class="btn btn-outline-danger p-3" id="liveToastBtn"> Donate Now</button>
     </section>
     <section class="donate-plan">
         <h1>Our Donate Plan</h1>
@@ -77,7 +79,7 @@
                 <p>Many people are homeless, starved & raved disasters </p>
                 <p>They need a hope to Live</p>
                 <p>Your one donation can change their lives</p>
-                <button type="button" class="btn btn-outline-danger p-3 my-3" href="https://www.gmb-akash.com/stories/47/">Make a Change !</button>
+                <button type="button" class="btn btn-outline-danger p-3 my-3" href="#plans">Make a Change !</button>
             </div>
             <div>
                 <img id="lower-banner" class="container-fluid" src="donate-today-main\images\donation6.jpg" alt="Crisis1"/>
@@ -92,7 +94,7 @@
                 <p>Millions of people are struggling to Survive</p>
                 <p>They need your precious support to live</p>
                 <p>Your small step can make a huge leap</p>
-                <button type="button" class="btn btn-outline-danger p-3 my-3" href="https://www.gmb-akash.com/stories/47/">How to Contribute?</button>
+                <button type="button" class="btn btn-outline-danger p-3 my-3" href="#plans">How to Contribute?</button>
             </div>
         </div>
     </section>
@@ -122,12 +124,17 @@
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            <button type="submit" class="btn btn-danger">Subscribe</button>
+            <button type="submit" class="btn btn-danger" href="#">Subscribe</button>
           </form>
     </section>
     <footer class="d-flex flex-column justify-content-center align-items-center py-5">
         <h1 id="footer">Be Humble</h1>
         <p>I'm Gonna Do It</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
